--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "express-validator": "^7.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.2",
     "papaparse": "^5.5.3",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
